fix image stretch on mobile

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ nav {
 }
 
 #project-list img {
+    display: block;
     width: 100%;
     height: auto;
     max-height: 60vmin;
